Use GPU resources for MacViews

Bug: 648430
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I27852e56e93ab869d212e7c1486eb2ba320d2407